<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="?attr/xui_config_color_background"
              android:orientation="vertical"
              tools:ignore="TooManyViews">
    <androidx.core.widget.NestedScrollView style="@style/ScrollViewStyle">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">
            <!--保活措施-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/keep_alive"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/keep_alive_tips"
                        android:textSize="10sp"
                        tools:ignore="SmallSp"/>
            </LinearLayout>
            <!--通知权限-->
            <LinearLayout
                    style="@style/settingBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_allow_notifications"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_allow_notifications_tips"
                            android:textSize="9sp"
                            tools:ignore="SmallSp"/>
                </LinearLayout>
                <com.xuexiang.xui.widget.button.ButtonView
                        android:id="@+id/btn_main_request_notification_service_permission"
                        android:text="@string/common_permission_granted"
                        style="@style/ButtonView.Blue"/>
            </LinearLayout>

            <!--新版通知权限-->
            <LinearLayout
                    style="@style/settingBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_request_send_notifications_api33"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_request_send_notifications_api33_tips"
                            android:textSize="9sp"
                            tools:ignore="SmallSp"/>
                </LinearLayout>
                <com.xuexiang.xui.widget.button.ButtonView
                        android:id="@+id/btn_main_request_post_notification"
                        android:text="@string/common_permission_granted"
                        style="@style/ButtonView.Blue"/>
            </LinearLayout>

            <!--开机启动-->
            <LinearLayout
                    style="@style/settingBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_startup"
                            android:textStyle="bold"/>

                    <TextView
                            android:id="@+id/tv_auto_startup"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/auto_startup"
                            android:textSize="9sp"
                            tools:ignore="SmallSp"/>
                </LinearLayout>
                <com.xuexiang.xui.widget.button.switchbutton.SwitchButton
                        android:id="@+id/sb_with_reboot"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <!--忽略电池优化设置-->
            <LinearLayout
                    android:id="@+id/layout_battery_setting"
                    style="@style/settingBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/battery_setting"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/battery_setting_tips"
                            android:textSize="9sp"
                            tools:ignore="SmallSp"/>
                </LinearLayout>
                <com.xuexiang.xui.widget.button.switchbutton.SwitchButton
                        android:id="@+id/sb_battery_setting"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <!--                        <com.xuexiang.xui.widget.button.ButtonView-->
                <!--                                android:id="@+id/btn_main_request_ignore_battery_optimizations_permission"-->
                <!--                                android:text="@string/common_permission_granted"-->
                <!--                                style="@style/ButtonView.Blue"/>-->
            </LinearLayout>

            <!--在最近任务列表中隐藏-->
            <LinearLayout
                    android:id="@+id/layout_exclude_from_recents"
                    style="@style/settingBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enable_exclude_from_recents"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enable_exclude_from_recents_tips"
                            android:textSize="9sp"
                            tools:ignore="SmallSp"/>
                </LinearLayout>
                <com.xuexiang.xui.widget.button.switchbutton.SwitchButton
                        android:id="@+id/sb_exclude_from_recents"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>
            <!--启动Cactus保活-->
            <LinearLayout
                    style="@style/settingBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enable_cactus"
                            android:textStyle="bold"
                            tools:ignore="RelativeOverlap"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/enabe_cactus_tips"
                            android:textSize="9sp"
                            tools:ignore="SmallSp"/>
                    <LinearLayout
                            android:id="@+id/layout_cactus_optional"
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:visibility="gone">
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/optional_components"
                                android:textSize="10sp"
                                android:textStyle="bold"
                                tools:ignore="SmallSp"/>
                        <com.xuexiang.xui.widget.button.SmoothCheckBox
                                android:id="@+id/scb_play_silence_music"
                                android:layout_width="15dp"
                                android:layout_height="15dp"
                                app:scb_color_checked="@color/colorPrimary"/>
                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/play_silence_music"
                                android:textSize="10sp"
                                tools:ignore="SmallSp"/>
                        <LinearLayout
                                android:id="@+id/layout_one_pixel_activity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="gone">
                            <com.xuexiang.xui.widget.button.SmoothCheckBox
                                    android:id="@+id/scb_one_pixel_activity"
                                    android:layout_width="15dp"
                                    android:layout_height="15dp"
                                    android:layout_marginStart="5dp"
                                    app:scb_color_checked="@color/colorPrimary"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/one_pixel_activity"
                                    android:textSize="10sp"
                                    tools:ignore="SmallSp"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
                <com.xuexiang.xui.widget.button.switchbutton.SwitchButton
                        android:id="@+id/sb_enable_cactus"
                        style="@style/SwitchButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
            </LinearLayout>

            <!--建议允许的权限-->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suggest_allowing_permissions"
                        android:textStyle="bold"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/suggest_allowing_permissions_tips"
                        android:textSize="10sp"
                        tools:ignore="SmallSp"/>
            </LinearLayout>
            <!--定位权限-->
            <LinearLayout
                    style="@style/settingBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_permission_location"
                            android:textStyle="bold"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_permission_location_tips"
                            android:textSize="9sp"
                            tools:ignore="SmallSp"/>
                </LinearLayout>
                <com.xuexiang.xui.widget.button.ButtonView
                        android:id="@+id/btn_main_request_location_permission"
                        android:text="@string/common_permission_granted"
                        style="@style/ButtonView.Blue"/>
            </LinearLayout>
            <!--媒体文件读取权限-->
            <LinearLayout
                    style="@style/settingBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_permission_media_read"
                            android:textStyle="bold"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_permission_media_read_tips"
                            android:textSize="9sp"
                            tools:ignore="SmallSp"/>
                </LinearLayout>
                <com.xuexiang.xui.widget.button.ButtonView
                        android:id="@+id/btn_main_request_read_media_permission"
                        android:text="@string/common_permission_granted"
                        style="@style/ButtonView.Blue"/>
            </LinearLayout>
            <!--申请所有文件管理权限-->
            <LinearLayout
                    style="@style/settingBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_permission_all_file_access"
                            android:textStyle="bold"/>
                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/common_permission_all_file_access_tips"
                            android:textSize="9sp"
                            tools:ignore="SmallSp"/>
                </LinearLayout>
                <com.xuexiang.xui.widget.button.ButtonView
                        android:id="@+id/btn_main_request_manage_storage_permission"
                        android:text="@string/common_permission_granted"
                        style="@style/ButtonView.Blue"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
